# sandbox-agentcore

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/agents/: ai-agent-engineer.agent.md  infra-engineer.agent.md
.github/instructions/: hitl-interrupt-workflows.instructions.md  minimal-agentcore-sandbox.instructions.md  reference-first-agentcore.instructions.md  slack-python-sdk.instructions.md  terraform-sandbox.instructions.md
apps/: agent.py  client.py  mock_data.py
apps/agents/: iam_terraform.py  leaf_account_manager.py  leaf_cert.py  leaf_credential.py  orchestrator.py  principal_lifecycle.py  supervisor_hr.py
apps/runtime/: __init__.py  hitl.py  local_fallback.py  roles.py  session.py
apps/slack/: __init__.py  blockkit.py  events.py  mock_data.py  socket_mode.py  workflows.py
apps/utils/: __init__.py  env.py  (+4 more)
doc/: bedrock-agentcore-dg.txt  evaluator-proposal-archive.md  seminar.md  slack-llms-full-python.txt  spec_leaf_account-manager-agent.md  spec_leaf_cert-agent.md  spec_orchestrator_root-agent.md  spec_supervisor_human-resorce-agent.md
evals/: __init__.py  quality_eval.py  routing_eval.py
terraform/: build.tf  buildspec.yml  codebuild.tf  iam.tf  leaf.tf  main.tf  memory.tf  orchestrator.tf  outputs.tf  s3.tf  supervisor.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_agent.py  test_iam_terraform.py  test_logging_config.py  test_principal_lifecycle.py  test_prompt_utils.py  test_runtime_hitl.py  test_slack_events.py  test_slack_socket_mode.py  test_slack_workflows.py
(+1 files in other folders)
