[project]
name = "sandbox-agentcore"
version = "0.1.0"
description = "Minimal Strands + Bedrock + AgentCore Runtime sandbox"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=1.45.0",
    "strands-agents-tools>=0.2.0",
    "bedrock-agentcore>=1.15.1",
    "boto3>=1.43.36",
    "slack-sdk>=3.39.0",
    "strands-agents-evals>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "pyright>=1.1.411",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated.*:pydantic.warnings.PydanticDeprecatedSince20:bedrock_agentcore.runtime.context",
]

[tool.ruff]
line-length = 100

[tool.pyright]
include = ["apps", "tests", "evals"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
